--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 										<h3>Training CNN Model with ImageNet on PARAM Siddhi-AI Supercomputer </h3>
 										<p>CNN, High-Performance Computing, Image Classification, Data Visualization, CUDA, PyTorch</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><a href="https://github.com/users/architadhande/projects/4/views/1" class="button small">Details</a></li>
 										</ul>
 									</div>
 								</article>
@@ -133,7 +133,7 @@
 										<h3>Address Parsing and Matching using NLP and Bi-LSTM</h3>
 										<p> NLP, Data Normalization, Attention model, Data Parsing, Data Matching</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><a href="https://github.com/users/architadhande/projects/5/views/1" class="button small">Details</a></li>
 										</ul>
 									</div>
 								</article>
@@ -143,9 +143,9 @@
 									</a>
 									<div class="caption">
 										<h3>Text Mining and NLP for Brand Analysis in the Automobile Industry</h3>
-										<p>Web Scraping, NLP, Data Waehousing, Selenium, SciPy, Spacy</p>
+										<p>Web Scraping, NLP, Data Warehousing, Selenium, SciPy, Spacy</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><a href="https://github.com/users/architadhande/projects/6/views/1" class="button small">Details</a></li>
 										</ul>
 									</div>
 								</article>
@@ -157,7 +157,7 @@
 										<h3>Sustainable Development for Solid Wet Waste Management </h3>
 										<p>Relational Database Design, Relational DBMS, MySQL, NetBeans, Java, NodeJS</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><a href="https://github.com/users/architadhande/projects/7/views/1" class="button small">Details</a></li>
 										</ul>
 									</div>
 								</article>
@@ -169,7 +169,7 @@
 										<h3>Behavioural Cloning in Autonomous Vehicle using CNN</h3>
 										<p>CNN, Image Processing, Data Collection, Neural Network Training, Algorithm Development, Simulation Testing, Image Analysis</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><a href="https://github.com/users/architadhande/projects/8/views/1" class="button small">Details</a></li>
 										</ul>
 									</div>
 								</article>
@@ -181,7 +181,7 @@
 										<h3>Analyzing greenhouse gas emisions in India and providing a solution</h3>
 										<p>Data Collection, Missingno, Seaborn, Matplotlib, Ploty, MongoDB, PowerBI</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><a href="https://github.com/users/architadhande/projects/9/views/1" class="button small">Details</a></li>
 										</ul>
 									</div>
 								</article>
@@ -193,7 +193,7 @@
 										<h3>Comparative Analysis of Human Hand Gesture Recognition in real-time Healthcare applications</h3>
 										<p>Gesture recognition, CNN, Image processing, Data collection, Neural network training, Image analysis, Model evaluation, Model accuracy</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><a href="https://github.com/users/architadhande/projects/10/views/1" class="button small">Details</a></li>
 										</ul>
 									</div>
 								</article>
@@ -205,7 +205,7 @@
 										<h3>Pipe Inspection Robot using Arduino UNO</h3>
 										<p>Robotics with Arduino, Tinkercad simulation, Ultrasonic inspection, Gas sensor data analysis, Temperature sensor data analysis</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><a href="https://github.com/users/architadhande/projects/11/views/1" class="button small">Details</a></li>
 										</ul>
 									</div>
 								</article>				
