--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Archita Dhande</h1>
-							<h3>Aspiring Data Analyst | Data Scientist </h3>
+							<h3>Data Analyst | Data Scientist </h3>
 							<p class="major">Pursuing a Masters in <a href="https://viterbigradadmission.usc.edu/programs/masters/msprograms/industrial-systems-engineering/ms-analytics/">Analytics</a> at USC Viterbi School of Engineering, I combine a technical background in  <a href="https://mitwpu.edu.in/programme/btech-computer-science-and-engineering#:~:text=Tech%20Computer%20Science%20and%20Engineering,-Programme%20Overview&text=The%20B.,and%20mathematics%20and%20science%20knowledge.">Computer Science and Engineering</a> with a passion for data-driven insights to solve complex problems.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
@@ -38,24 +38,25 @@
 					</div>
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
-						<div class="content">
-							<p>Oct 2023 - Dec 2023</p>
-							<h2>Seminar Assistant (Current)</h2>
-							<h3>USC Gould Continuing Legal Education Office</h3>
-							<p>Playing a key role in three high-profile events: the 2023 Institute on Entertainment Law and Business, the 49th Annual Trust and Estate Conference, and the 2023 Institute for Corporate Counsel. My responsibilities included proficiently utilizing Microsoft Excel and Office to streamline event logistics, ensuring a seamless experience for all attendees.</p>
-							
-						</div>
-						<div class="image">
-							<img src="images/p1.jpeg" alt="" style="width: 100%; max-height: 100vh;"/>
-						</div>
+					    <div class="content">
+					        <p>JUNE 2024 - AUG 2024</p>
+					        <h2>Data Analyst Intern</h2>
+					        <h3>Esri, LA</h3>
+					        <p>Analyzed and visualized U.S. drug overdose mortality trends from 2024-2025 using real-time CDC data, leveraging GIS technology and advanced data analysis techniques to manage, clean, and integrate large-scale health datasets. Developed interactive reports with ArcGIS StoryMap, Dashboard, and Hub, translating complex spatial and statistical data into actionable insights to inform data-driven public health decisions and interventions.</p>
+					        <a href="https://storymaps.arcgis.com/stories/3c5a34a229024c19acebea26e0f26ad3" target="_blank" class="button">View StoryMap</a>
+					    </div>
+					    <div class="image">
+					        <img src="images/p1.jpeg" alt="" style="width: 100%; max-height: 100vh;"/>
+					    </div>
 					</section>
 					<hr style="border: 0; border-top: 1px solid #333; margin: 0;">
+
 
 				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<p>Mar 2022 - Mar 2023</p>
-							<h2>Research Intern</h2>
+							<h2>Data Science Research Intern</h2>
 							<h3>Center for Development of Advanced Computing, Pune</h3>
 							<h4>Computer Vision, Neural Networks, PyTorch, Cuda</h4>
 							<p>Benchmarked CNN model on PARAM Siddhi-AI's 41,664 cores, achieving 89% accuracy. Collaborated on fine-tuning for multi-railing data, significantly improving efficiency. Reduced training time from 14 days on a normal device to just minutes on the supercomputer for a dataset with 1,281,167 training images across 1,000 categories.</p>
@@ -117,6 +118,31 @@
 										<img src="images/pp1.jpg" alt="" />
 									</a>
 									<div class="caption">
+										<h3>Health Risk Prediction Pipeline</h3>
+										<p>| GCP, Kubeflow Pipelines, TensorFlow, VertexAI, BigQuery, Imputation, Feature Engineering</p>
+										<ul class="actions fixed">
+											<li><a href="https://github.com/architadhande/Health-Risk-Prediction-Pipeline" class="button small">Details</a></li>
+										</ul>
+									</div>
+								</article>
+								<article>
+									<a href="images/pp1.jpg" class="image">
+										<img src="images/pp1.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Automated Dataset Generation and Assessment for Education</h3>
+										<p>Machine Learning, ETL tools, Data Mining, Python, Advanced SQL</p>
+										<ul class="actions fixed">
+											<li><a href="https://github.com/architadhande/Automated-Dataset-Generation-and-Assessment-for-Education" class="button small">Details</a></li>
+										</ul>
+									</div>
+								</article>
+								
+								<article>
+									<a href="images/pp1.jpg" class="image">
+										<img src="images/pp1.jpg" alt="" />
+									</a>
+									<div class="caption">
 										<h3>Training CNN Model with ImageNet on PARAM Siddhi-AI Supercomputer </h3>
 										<p>CNN, High-Performance Computing, Image Classification, Data Visualization, CUDA, PyTorch</p>
 										<ul class="actions fixed">
@@ -145,7 +171,7 @@
 										<h3>Text Mining and NLP for Brand Analysis in the Automobile Industry</h3>
 										<p>Web Scraping, NLP, Data Warehousing, Selenium, SciPy, Spacy</p>
 										<ul class="actions fixed">
-											<li><a href="https://github.com/users/architadhande/projects/6/views/1" class="button small">Details</a></li>
+											<li><a href="https://github.com/architadhande/Text-Mining-and-NLP-for-Brand-Analysis-in-the-Automobile-Industry" class="button small">Details</a></li>
 										</ul>
 									</div>
 								</article>
@@ -169,7 +195,7 @@
 										<h3>Behavioural Cloning in Autonomous Vehicle using CNN</h3>
 										<p>CNN, Image Processing, Data Collection, Neural Network Training, Algorithm Development, Simulation Testing, Image Analysis</p>
 										<ul class="actions fixed">
-											<li><a href="https://github.com/users/architadhande/projects/8/views/1" class="button small">Details</a></li>
+											<li><a href="https://github.com/architadhande/Behavioral-Cloning-in-Autonomous-Vehicles-using-CNN" class="button small">Details</a></li>
 										</ul>
 									</div>
 								</article>
@@ -181,7 +207,7 @@
 										<h3>Analyzing greenhouse gas emisions in India and providing a solution</h3>
 										<p>Data Collection, Missingno, Seaborn, Matplotlib, Ploty, MongoDB, PowerBI</p>
 										<ul class="actions fixed">
-											<li><a href="https://github.com/users/architadhande/projects/9/views/1" class="button small">Details</a></li>
+											<li><a href="https://github.com/architadhande/Analyzing-greenhouse-gas-emissions-in-India-and-providing-a-solution" class="button small">Details</a></li>
 										</ul>
 									</div>
 								</article>
