--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					        <a href="https://storymaps.arcgis.com/stories/3c5a34a229024c19acebea26e0f26ad3" target="_blank" class="button">View StoryMap</a>
 					    </div>
 					    <div class="image">
-					        <img src="images/p1.jpeg" alt="" style="width: 100%; max-height: 100vh;"/>
+					        <img src="images/esri logo.png" alt="" style="width: 100%; max-height: 100vh;"/>
 					    </div>
 					</section>
 					<hr style="border: 0; border-top: 1px solid #333; margin: 0;">
