--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
 					</div>
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
-					    <div class="content">
-					        <p>JUNE 2024 - AUG 2024</p>
-					        <h2>Data Analyst Intern</h2>
-					        <h3>Esri, LA</h3>
-					        <p>Analyzed and visualized U.S. drug overdose mortality trends from 2024-2025 using real-time CDC data, leveraging GIS technology and advanced data analysis techniques to manage, clean, and integrate large-scale health datasets. Developed interactive reports with ArcGIS StoryMap, Dashboard, and Hub, translating complex spatial and statistical data into actionable insights to inform data-driven public health decisions and interventions.</p>
-					        <a href="https://storymaps.arcgis.com/stories/3c5a34a229024c19acebea26e0f26ad3" target="_blank" class="button">View StoryMap</a>
-					    </div>
-					    <div class="image">
-					        <img src="images/esri logo.png" alt="" style="width: 100%; max-height: 100vh;"/>
-					    </div>
+					    	<div class="content">
+						        <p>JUNE 2024 - AUG 2024</p>
+						        <h2>Data Analyst Intern</h2>
+						        <h3>Esri, LA</h3>
+						        <p>Analyzed and visualized U.S. drug overdose mortality trends from 2024-2025 using real-time CDC data, leveraging GIS technology and advanced data analysis techniques to manage, clean, and integrate large-scale health datasets. Developed interactive reports with ArcGIS StoryMap, Dashboard, and Hub, translating complex spatial and statistical data into actionable insights to inform data-driven public health decisions and interventions.</p>
+						        <a href="https://storymaps.arcgis.com/stories/3c5a34a229024c19acebea26e0f26ad3" target="_blank" class="button">View StoryMap</a>
+						</div>
+					    	<div class="image">
+					        	<img src="images/esri logo.png" alt="" style="width: 100%; max-height: 100vh;"/>
+					    	</div>
 					</section>
 					<hr style="border: 0; border-top: 1px solid #333; margin: 0;">
 
@@ -114,8 +114,8 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="images/pp1.jpg" class="image">
-										<img src="images/pp1.jpg" alt="" />
+									<a href="images/Healthcare_project.png" class="image">
+										<img src="images/Healthcare_project.png" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Health Risk Prediction Pipeline</h3>
@@ -126,8 +126,8 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/pp1.jpg" class="image">
-										<img src="images/pp1.jpg" alt="" />
+									<a href="images/gradescope.png" class="image">
+										<img src="gradescope.png" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Automated Dataset Generation and Assessment for Education</h3>
