--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 						        <p>JUNE 2024 - AUG 2024</p>
 						        <h2>Data Analyst Intern</h2>
 						        <h3>Esri, LA</h3>
+							<h4>Geographic Information Systems(GIS), Health Data Analysis, Geo-Temporal Data Visualization, Predictive Analytics</h4>
 						        <p>Analyzed and visualized U.S. drug overdose mortality trends from 2024-2025 using real-time CDC data, leveraging GIS technology and advanced data analysis techniques to manage, clean, and integrate large-scale health datasets. Developed interactive reports with ArcGIS StoryMap, Dashboard, and Hub, translating complex spatial and statistical data into actionable insights to inform data-driven public health decisions and interventions.</p>
 						        <a href="https://storymaps.arcgis.com/stories/3c5a34a229024c19acebea26e0f26ad3" target="_blank" class="button">View StoryMap</a>
 						</div>
@@ -114,8 +115,8 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="images/Healthcare_project.png" class="image">
-										<img src="images/Healthcare_project.png" alt="" />
+									<a href="images/Healthcare_project.jpg" class="image">
+										<img src="images/Healthcare_project.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Health Risk Prediction Pipeline</h3>
@@ -126,8 +127,8 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gradescope.png" class="image">
-										<img src="gradescope.png" alt="" />
+									<a href="images/gradescope.jpg" class="image">
+										<img src="gradescope.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Automated Dataset Generation and Assessment for Education</h3>
