--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 								</article>
 								<article>
 									<a href="images/gradescope.jpg" class="image">
-										<img src="gradescope.jpg" alt="" />
+										<img src="images/gradescope.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Automated Dataset Generation and Assessment for Education</h3>
