--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 									</a>
 									<div class="caption">
 										<h3>Health Risk Prediction Pipeline</h3>
-										<p>| GCP, Kubeflow Pipelines, TensorFlow, VertexAI, BigQuery, Imputation, Feature Engineering</p>
+										<p>Google Cloud, Kubeflow Pipelines, TensorFlow, VertexAI, BigQuery, Imputation, Feature Engineering</p>
 										<ul class="actions fixed">
 											<li><a href="https://github.com/architadhande/Health-Risk-Prediction-Pipeline" class="button small">Details</a></li>
 										</ul>
