--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							
 						</div>
 						<div class="image">
-							<img src="images/mobalytics.jpeg" alt="" style="width: 100%; max-height: 100vh;"/>
+							<img src="images/mobalytics.jpg" alt="" style="width: 100%; max-height: 100vh;"/>
 						</div>
 					</section>
 					<hr style="border: 0; border-top: 1px solid #333; margin: 0;">
