--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<hr style="border: 0; border-top: 0.2cm solid #847c7c; margin: 1em;">
 					</div>
 				<!-- Two -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="second">
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="second">
 					    <div class="content">
 					        <p>SEPT 2024 - NOV 2024</p>
 					        <h2>Business Analytics Remote Extern</h2>
