--- a/index.html
+++ b/index.html
@@ -397,19 +397,16 @@
 									<span class="icon solid style2 major fa-trophy"></span>
 									<h3>Winner</h3>
 									<h4>HACK-MIT Innovation Hackathon, MIT-WPU</h4>
-									<p>Proposed a winning "Smart Food Scanner" idea to assess packaged food additives, ADI limits, and personalized dietary recommendations, triumphing over 80 rival teams in 3 presentation rounds.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-trophy"></span>
 									<h3>1st Runner Up</h3>
 									<h4>Indigo Saga, Mood Indigo Fest, IIT Bombay</h4>
-									<p>India's premier international event, competing against 50 teams in a contemporary thematic dance competition. Our ensemble of 15 artists left a remarkable impression.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-trophy"></span>
 									<h3>1st Runner Up</h3>
 									<h4>Thematic Dance, Aarohan Fest, MIT-WPU</h4>
-									<p>Our 15-member team left an indelible mark at Aarohan, MIT WPU's national fest, where we competed with 20 other exceptional groups through an contemporary thematic dance.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-user"></span>
@@ -418,8 +415,8 @@
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-user"></span>
-									<h3>Affiliate Manager</h3>
-									<h4>Society of Women's Engineer, SWE MIT-WPU</h4>
+									<h3>Global Graduate Ambassador</h3>
+									<h4>Society of Women's Engineer, SWE USC</h4>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-user"></span>
@@ -428,8 +425,8 @@
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-certificate"></span>
-									<h3>Google</h3>
-									<h4>Data Analytics: Foundations: Data, Data, Everywhere</h4>
+									<h3>Google Certified</h3>
+									<h4>Data Analytics Professional Certification</h4>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-certificate"></span>
@@ -438,8 +435,8 @@
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-certificate"></span>
-									<h3>Datacamp</h3>
-									<h4>Intermediate in SQL</h4>					
+									<h3>Databricks</h3>
+									<h4>Academy Accreditation - Databricks Fundamentals</h4>					
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-certificate"></span>
