--- a/index.html
+++ b/index.html
@@ -1178,7 +1178,7 @@
             <div class="about-item">
                 <div class="about-header">
                     <div class="about-icon"><i class="fas fa-music"></i></div>
-                    <h3 class="about-title">USC Dancer - Team Jashn</h3>
+                    <h3 class="about-title">Team Jashn - USC Bollywood Dance Group</h3>
                 </div>
                 <p class="about-description">
                     <strong>Jan 2024 - May 2025</strong><br>
@@ -1190,7 +1190,7 @@
             <div class="about-item">
                 <div class="about-header">
                     <div class="about-icon"><i class="fas fa-medal"></i></div>
-                    <h3 class="about-title">Dance Competition Achievements</h3>
+                    <h3 class="about-title">Team MIT Cultural Dance</h3>
                 </div>
                 <p class="about-description">
                     1st Runner Up at Indigo Saga, Mood Indigo Fest (IIT Bombay) and 1st Runner Up at Thematic Dance, Aarohan Fest (MIT-WPU). Passionate about cultural expression through dance.
