--- a/index.html
+++ b/index.html
@@ -762,8 +762,8 @@
             <div class="timeline-item">
                 <div class="timeline-content">
                     <div class="timeline-date">July 2025 - Present</div>
-                    <h3 class="timeline-title">Research Assistant</h3>
-                    <p class="timeline-company">USC Viterbi School of Engineering</p>
+                    <h3 class="timeline-title">Data Science and Analytics Engineer</h3>
+                    <p class="timeline-company">Easley-Dunn Productions, Inc.</p>
                     <div class="timeline-skills">
                         <span class="skill-tag">Simulation Modeling</span>
                         <span class="skill-tag">A/B Testing</span>
