--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             background-image: url('images/me2.jpg');
             background-size: cover;
             background-position: center;
-            opacity: 0.7;
+            opacity: 0.4;
             z-index: 1;
             border-radius: 50%;
             animation: float-reverse 6s ease-in-out infinite;
@@ -772,7 +772,7 @@
                         <span class="skill-tag">Economic Validation</span>
                     </div>
                     <p class="timeline-description">
-                        Designing and simulating the Card Character Acquisition System (CCAS) for Monster Gridiron, a mobile sports game. Build pricing tiers, dupe conversion rules, and progression models for diverse player archetypes (F2P, competitive, premium). Apply data-driven simulations, economic balancing, and retention loop optimization to enhance player engagement and in-game economy systems.
+                        Leading a 4-person cross-functional team in the design, simulation, and implementation of the Card Character Acquisition System (CCAS) for Monster Gridiron, a mobile sports title. Designing and simulating data-driven acquisition systems for diverse player archetypes, optimizing drop rates, economy balance, and retention through statistical analysis and data pipeline integration.
                     </p>
                 </div>
                 <div class="timeline-dot"></div>
@@ -1114,47 +1114,9 @@
                     </div>
                 </div>
 
-                <!-- Project 13 -->
-                <div class="project-card">
-                    <div class="project-image">
-                        <i class="fas fa-hand-paper"></i>
-                    </div>
-                    <div class="project-content">
-                        <h3 class="project-title">Comparative Analysis of Human Hand Gesture Recognition in Healthcare</h3>
-                        <div class="timeline-skills">
-                            <span class="skill-tag">Gesture Recognition</span>
-                            <span class="skill-tag">CNN</span>
-                            <span class="skill-tag">Healthcare</span>
-                        </div>
-                        <p class="project-description">
-                            Advanced hand gesture recognition system for healthcare applications achieving 99.97% accuracy using computer vision.
-                        </p>
-                        <a href="https://github.com/users/architadhande/projects/10/views/1" class="project-link">
-                            View Project <i class="fas fa-arrow-right"></i>
-                        </a>
-                    </div>
-                </div>
+                
 
-                <!-- Project 14 -->
-                <div class="project-card">
-                    <div class="project-image">
-                        <i class="fas fa-robot"></i>
-                    </div>
-                    <div class="project-content">
-                        <h3 class="project-title">Pipe Inspection Robot using Arduino UNO</h3>
-                        <div class="timeline-skills">
-                            <span class="skill-tag">Arduino</span>
-                            <span class="skill-tag">Robotics</span>
-                            <span class="skill-tag">Sensors</span>
-                        </div>
-                        <p class="project-description">
-                            Automated pipe inspection robot using Arduino with multiple sensors for infrastructure monitoring and analysis.
-                        </p>
-                        <a href="https://github.com/users/architadhande/projects/11/views/1" class="project-link">
-                            View Project <i class="fas fa-arrow-right"></i>
-                        </a>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </section>
